# Lab_prog_Timer

./: CMakeLists.txt  ClockDisplay.cpp  ClockDisplay.h  DateDisplay.cpp  DateDisplay.h  Observer.h  README.md  Subject.h  SubjectTimer.cpp  SubjectTimer.h  TimerDisplay.cpp  TimerDisplay.h  Window.cpp  Window.h  main.cpp
